[workspace]

resolver = "2"

members = [
    "crates/relayer",
    "crates/relayer-types",
    "crates/relayer-cli",
    "crates/relayer-rest",
    "crates/relayer-storage",
    "crates/telemetry",
    "crates/chain-registry",
    "tools/integration-test",
    "tools/test-framework",
    "tools/check-guide",
    "tools/query-events",
    "tools/forcerelay-test",
    "tools/ibc-test",
]

[patch.crates-io]
arbitrary = { git = "https://github.com/michaelsproul/arbitrary", rev="f002b99989b561ddce62e4cf2887b0f8860ae991" }
# ibc-proto                        = { git = "https://github.com/cosmos/ibc-proto-rs.git",       branch = "main" }
# tendermint                       = { git = "https://github.com/informalsystems/tendermint-rs", branch = "main" }
# tendermint-rpc                   = { git = "https://github.com/informalsystems/tendermint-rs", branch = "main" }
# tendermint-proto                 = { git = "https://github.com/informalsystems/tendermint-rs", branch = "main" }
# tendermint-light-client          = { git = "https://github.com/informalsystems/tendermint-rs", branch = "main" }
# tendermint-light-client-verifier = { git = "https://github.com/informalsystems/tendermint-rs", branch = "main" }
# tendermint-testgen               = { git = "https://github.com/informalsystems/tendermint-rs", branch = "main" }

# Make librocksdb.a and all test binaries that link with it smaller, to save disk space in CI.
[profile.dev.package.ckb-librocksdb-sys]
opt-level = 1
debug = false
