[package]
name       = "ibc-relayer-cli"
version    = "1.4.0"
edition    = "2021"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint", "ckb", "axon", "ethereum"]
homepage   = "https://hermes.informal.systems/"
repository = "https://github.com/synapseweb3/forcerelay"
authors    = ["Cryptape Interops Team"]
rust-version = "1.65"
description  = """
  Forcerelay is an IBC-Compatible Relayer written in Rust
"""
default-run = "forcerelay"

[[bin]]
name = "forcerelay"

[features]
default     = ["telemetry", "rest-server", "std", "eyre_tracer",]
std         = ["flex-error/std"]
eyre_tracer = ["flex-error/eyre_tracer"]
profiling   = ["ibc-relayer/profiling"]
telemetry   = ["ibc-relayer/telemetry", "ibc-telemetry"]
rest-server = ["ibc-relayer-rest"]

[dependencies]
ibc-relayer-types  = { version = "0.23.0", path = "../relayer-types", features = ["std", "clock"] }
ibc-relayer        = { version = "0.23.0", path = "../relayer" }
ibc-telemetry      = { version = "0.23.0", path = "../telemetry", optional = true }
ibc-relayer-rest   = { version = "0.23.0", path = "../relayer-rest", optional = true }
ibc-chain-registry = { version = "0.23.0" , path = "../chain-registry" }

atty                     = "0.2.14"
clap                     = { version = "3.2", features = ["cargo"] }
clap_complete            = "3.2"
color-eyre               = "0.6"
console                  = "0.15.5"
crossbeam-channel        = "0.5.5"
dialoguer                = "0.10.3"
dirs-next                = "2.0.0"
eyre                     = "0.6.8"
flex-error               = { version = "0.4.4", default-features = false, features = ["std", "eyre_tracer"] }
futures                  = "0.3.27"
hdpath                   = "0.6.1"
http                     = "0.2"
humantime                = "2.1"
itertools                = "0.10.5"
oneline-eyre             = "0.1"
regex                    = "1.8.4"
serde                    = { version = "1.0", features = ["serde_derive"] }
serde_json               = "1"
signal-hook              = "0.3.15"
subtle-encoding          = "0.5"
tokio                    = { version = "1.0", features = ["full"] }
tracing                  = "0.1.36"
tracing-subscriber       = { version = "0.3.14", features = ["fmt", "env-filter", "json"]}

[dependencies.tendermint]
version = "0.30.0"
features = ["secp256k1"]

[dependencies.tendermint-rpc]
version = "0.30.0"
features = ["http-client", "websocket-client"]

[dependencies.tendermint-light-client-verifier]
version = "0.30.0"

[dependencies.abscissa_core]
version = "=0.6.0"
features = ["options"]

[dev-dependencies]
abscissa_core = { version = "=0.6.0", features = ["testing"] }
once_cell = "1.17"
regex = "1.8"
