[package]
name = "forcerelay-test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
ckb-sdk = "3.0.0"
ckb-jsonrpc-types = "0.111.0"
ckb-types = "0.111.0"
hex = "0.4"

eth_light_client_in_ckb-verification = { version = "0.2.3", git = "https://github.com/synapseweb3/eth-light-client-in-ckb", tag = "v0.2.3" }
relayer = { version = "*", package = "ibc-relayer", path = "../../crates/relayer" }
