[package]
name = "ibc-solidity-abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
ethers = "2.0.10"
eyre = "0.6.8"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["full"] }
